--- a/index.html
+++ b/index.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>MediPrediction</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MediPrediction - Smart Medical Diagnosis</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>  
+<body>
+
   <header class="header">
- <div class="container header-content">
+    <div class="container header-content">
       <h1 class="logo">MediPrediction</h1>
       <nav class="nav">
-  <a href="features.html">Features</a>
-  <span class="separator">|</span>
-  <p class="one"><a href="about.html">About</a></p>
-  <span class="separator">|</span>
-  <p class="one"><a href="contact.html">Contact</a></p>
-  <span class="separator">|</span>
-  <a href="login.html" class="login-btn">Login</a>
-  <a href="signup.html" class="signup-btn">Sign Up</a>
-
-    </nav>
+        <a href="features.html">Features</a>
+        <span class="separator">|</span>
+        <a href="about.html">About</a>
+        <span class="separator">|</span>
+        <a href="contact.html">Contact</a>
+        <span class="separator">|</span>
+        <a href="login.html" class="login-btn">Login</a>
+        <a href="signup.html" class="signup-btn">Sign Up</a>
+      </nav>
     </div>
   </header>
 
@@ -44,57 +34,13 @@
     </div>
   </section>
 
-  <section id="features" class="features">
+  <section class="features">
     <div class="container">
       <h3>Why Choose MediPrediction?</h3>
 
-      <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747733657694-Easy_Diagnosis_6kiZbehx0.png" alt="Easy Diagnosis" class="feature-icon">
-        <h4>Easy Diagnosis</h4>
-        <p>Just answer a few simple questions and our AI will predict your possible conditions.</p>
-      </div>
+      <!-- All feature boxes go here (you already have them correct) -->
+      <!-- Use your current <div class="feature-box"> blocks -->
 
-      <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747733952562-Instant_Suggestions_PGs0IMZ9s.png" alt="Instant Suggestions" class="feature-icon">
-        <h4>Instant Suggestions</h4>
-        <p>Receive tailored recommendations for treatment and care based on your inputs.</p>
-      </div>
-
-      <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734003339-User-Freindly_2U1A8Yg2oE.png" alt="Dashboard" class="feature-icon">
-        <h4>User-Friendly Dashboard</h4>
-        <p>Track your reports, get insights, and manage your health all in one place.</p>
-      </div>
-
-      <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734511384-Secure_e1r4D_lnV.png" alt="Security" class="feature-icon">
-        <h4>Secure & Confidential</h4>
-        <p>We prioritize your privacy. All data is encrypted and securely stored.</p>
-      </div>
-
-      <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734559827-Affordable_U-MoJrLYJ.png" alt="Affordable" class="feature-icon">
-        <h4>Affordable for Everyone</h4>
-        <p>We believe healthcare should be accessible. Enjoy powerful tools at a low price.</p>
-      </div>
-
-      <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734639001-Medical_Use_5qIrjuoTo.png" alt="Medical Use" class="feature-icon">
-        <h4>Dedicated for Medical Use</h4>
-        <p>Built by healthcare professionals and AI engineers to serve real medical needs.</p>
-      </div>
-
-      <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747734691257-Service_24_7-bro_f1giv0AX7.png" alt="24/7 AI" class="feature-icon">
-        <h4>24/7 AI Support</h4>
-        <p>Our AI assistant is available round the clock to answer your medical queries.</p>
-      </div>
-
-      <div class="feature-box">
-        <img src="https://ik.imagekit.io/6ilngyaqa/1747735025175-14_Day_Trial_-lx4D0IlfD.png" alt="Free Trial" class="feature-icon">
-        <h4>14-Day Free Trial</h4>
-        <p>Try it out risk-free. Cancel anytime if you’re not satisfied.</p>
-      </div>
     </div>
   </section>
 
@@ -108,7 +54,7 @@
     </div>
   </section>
 
-  <section id="faq" class="faq">
+  <section class="faq">
     <div class="aags">
       <h3>Frequently Asked Questions</h3>
       <details>
@@ -131,9 +77,6 @@
       <p>&copy; 2025 MediPrediction. All rights reserved.</p>
     </div>
   </footer>
-</body>
-</html>
-<!-- partial -->
-  
+
 </body>
 </html>
