--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,86 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    /* [your existing CSS remains unchanged] */
+    .form-container {
+      max-width: 400px;
+      margin: 80px auto;
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .form-container h2 {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .form-group {
+      margin-bottom: 20px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: bold;
+    }
+
+    .form-group input {
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    .btn-submit {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 6px;
+      background-color: #007BFF;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .btn-submit:hover {
+      background-color: #6bb3ff;
+    }
+
+    .form-footer {
+      text-align: center;
+      margin-top: 15px;
+    }
+
+    .form-footer a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    .logo {
+      font-size: 3rem;
+      color: #0077ff;
+      font-weight: 900;
+    }
+
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background-color: white;
+    }
+    
+    .nav a {
+      text-decoration: none;
+      color: #444;
+      font-weight: 600;
+      transition: color 0.3s;
+    }
+    
+    .nav a:hover {
+      color: #0077ff;
+    }
   </style>
 </head>
 <body>
@@ -28,36 +107,28 @@
   </header>
 
   <main>
-    <!-- ✅ ONLY ONE FORM tag -->
     <form action="signup_process.php" method="POST">
-      <div class="form-container">
-        <h2>Sign Up</h2>
-
-        <!-- ✅ Add name="fullname" -->
+    <div class="form-container">
+      <h2>Sign Up</h2>
+      <form>
         <div class="form-group">
           <label for="signup-name">Full Name</label>
-          <input type="text" id="signup-name" name="fullname" required />
+          <input type="text" id="signup-name" required />
         </div>
-
-        <!-- ✅ Add name="email" -->
         <div class="form-group">
           <label for="signup-email">Email</label>
-          <input type="email" id="signup-email" name="email" required />
+          <input type="email" id="signup-email" required />
         </div>
-
-        <!-- ✅ Add name="password" -->
         <div class="form-group">
           <label for="signup-password">Password</label>
-          <input type="password" id="signup-password" name="password" required />
+          <input type="password" id="signup-password" required />
         </div>
-
         <button type="submit" class="btn-submit">Create Account</button>
-
-        <div class="form-footer">
-          Already have an account? <a href="login.html">Login</a>
-        </div>
+      </form>
+      <div class="form-footer">
+        Already have an account? <a href="login.html">Login</a>
       </div>
-    </form>
+    </div>
   </main>
 </body>
 </html>
